--- a/calculadora.html
+++ b/calculadora.html
@@ -23,7 +23,6 @@
                 <td><button class="btnOito" onclick="escrever('8')">8</button></td>
                 <td><button class="btnNove" onclick="escrever('9')">9</button></td>
                 <td><button class="btnSubtrair" onclick="escrever('-')">-</button></td>
-
             </tr>
             <tr>
                 <td><button class="btnQuatro" onclick="escrever('4')">4</button></td>
@@ -35,16 +34,16 @@
                 <td><button class="btnUm" onclick="escrever('1')">1</button></td>
                 <td><button class="btnDois" onclick="escrever('2')">2</button></td>
                 <td><button class="btnTres" onclick="escrever('3')">3</button></td>
-                <td rowspan="2"><button td id="calcular" onclick="calcular('')" class="btnResultado"
+                <td rowspan="2"><button id="calcular" onclick="calcular('')" class="btnResultado"
                         style="height: 106px;">=</button>
                 </td>
             </tr>
             <tr>
                 <td colspan="2"><button class="btnZero" style="width: 106px;" onclick="escrever('0')">0</button>
+                </td>
                 <td><button class="btnVirgula" onclick="escrever('.')">.</button></td>
             </tr>
         </table>
-        </td>
     </div>
 
     <script src="calculadora.js"></script>
